--- a/TP02/Seance2.ipynb
+++ b/TP02/Seance2.ipynb
@@ -924,7 +924,7 @@
     "    np.ndarray\n",
     "        The dose values\n",
     "    \"\"\"\n",
-    "    return (energy * 1e6 * 1.602e-19 * mu_en * rho * flux) / mass\n",
+    "    return (energy * 1e6 * 1.602e-19 * mu_en * flux) / mass\n",
     "\n",
     "# Calculate the dose for a given linear attenuation coefficient (mu_en_pred),\n",
     "# density (rho), flux, mass, and a set of energy values (newEnergy)\n",
