Exercice and TP3

--- a/Introduction Python/Exercices_Python /Exercice_with_Solutions.ipynb
+++ b/Introduction Python/Exercices_Python /Exercice_with_Solutions.ipynb
@@ -29,9 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Résultat : 4.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Demander à l'utilisateur d'entrer deux nombres\n",
     "nombre1 = float(input(\"Entrez le premier nombre : \"))\n",
