--- a/Introduction Python/Exercices_Python /Exercice.ipynb
+++ b/Introduction Python/Exercices_Python /Exercice.ipynb
@@ -32,6 +32,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "nombre_1 = float(input(\"Entrez un nombre : \"))\n",
+    "nombre_2 = float(input(\"Entrez un autre nombre : \"))\n",
+    "operateur = input(\"Entrez un opérateur (+, -, *, /) : \")\n",
+    "\n",
+    "if operateur == \"+\":\n",
+    "    print(\"Le résultat de l'addition est\", nombre_1 + nombre_2)\n",
+    "elif operateur == \"-\":\n",
+    "    print(\"Le résultat de la soustraction est\", nombre_1 - nombre_2)\n",
+    "elif operateur == \"*\":\n",
+    "    print(\"Le résultat de la multiplication est\", nombre_1 * nombre_2)\n",
+    "elif operateur == \"/\":\n",
+    "    if nombre_2 == 0:\n",
+    "        print(\"Division par zéro impossible\")\n",
+    "    else:\n",
+    "        print(\"Le résultat de la division est\", nombre_1 / nombre_2)\n",
+    "else:\n",
+    "    print(\"Opérateur inconnu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -149,8 +174,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "PARESIS",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
