--- a/TP01/Seance1.ipynb
+++ b/TP01/Seance1.ipynb
@@ -1836,7 +1836,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "PARESIS",
    "language": "python",
    "name": "python3"
   },
